--- a/style.css
+++ b/style.css
@@ -46,6 +46,14 @@ footer {
   padding: 30px;
 }
 
+.navli {
+  display: inline;
+}
+
+button {
+  text-align: center;
+}
+
 .navlist{
   display: inline;
   margin: 0;
@@ -66,6 +74,12 @@ body{
   text-align: center;
 }
 
+.lorem {
+  margin-left: 20%;
+  margin-right: 20%;
+  text-align: left;
+}
+
 .navlink:hover{
   color: #003264;
   text-decoration: none;
@@ -74,5 +88,9 @@ body{
 @media (min-width: 600px) {
   body{
     text-align: left;
+  }
+
+  .contactform{
+    margin-left: 5px;
   }
 }
