--- a/style.css
+++ b/style.css
@@ -70,8 +70,12 @@ button {
   text-align: center;
 }
 
+html,
 body{
   text-align: center;
+  margin:0;
+  padding:0;
+  height:100%;
 }
 
 .lorem {
@@ -85,12 +89,49 @@ body{
   text-decoration: none;
 }
 
+/* Work */
+
+.exampleimg {
+  margin-left: 21%;
+  width: 30%;
+  margin-bottom: 5px;
+}
+
+/* Keeping Footer Down */
+
+#container {
+   min-height:100%;
+   position:relative;
+   height:100%;
+}
+#header {
+   background:#392e6d;
+   padding:10px;
+}
+#body {
+   padding:10px;
+   padding-bottom:60px;   /* Height of the footer */
+}
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
+   background:#6cf;
+}
+
+/* Default settings for website pages */
+
 @media (min-width: 600px) {
   body{
     text-align: left;
+    margin:0;
+    padding:0;
+    height:100%;
   }
 
   .contactform{
     margin-left: 5px;
+    margin-bottom: 5px;
   }
 }
