--- a/style.css
+++ b/style.css
@@ -1,28 +1,35 @@
+/* This sets all h1 elements to have a blue colour and be centered on the page relative to the body  */
 h1 {
   color: #392e6d;
   margin-bottom: 30px;
   text-align: center;
 }
 
+/* This sets all h2 elements to have a blue colour and be centered on the page relative to the body  */
 h2 {
   color: #392e6d;
   margin-bottom: 30px;
   text-align: center;
 }
 
+/* This sets all h3 elements to have a blue colour and be centered on the page relative to the body  */
 h3 {
   color: #392e6d;
   margin-bottom: 30px;
   text-align: center;
 }
+
+/* This applies 10 pixels of padding to the left of all p elements */
 p {
   padding-left: 10px;
 }
 
+/* This increases the margin on the left of all the button elements by 20 pixels */
 button {
   margin-left: 20px;
 }
 
+/* This sets the footer's background colour to grey, and adds 30 pixels of padding on all directions */
 footer {
   background: #3c3c3c;
   padding: 30px;
@@ -46,6 +53,7 @@ footer {
   padding: 30px;
 }
 
+/* This in combination with the .navlist css ensures that the navigation links in the navigation bar at the top of each page are all in line with each other */
 .navli {
   display: inline;
 }
@@ -70,6 +78,7 @@ button {
   text-align: center;
 }
 
+/* This text both sets up some properties for later CSS, and changes the text in all of the pages to center in case the screen size is smaller than a specific size */
 html,
 body{
   text-align: center;
@@ -78,12 +87,14 @@ body{
   height:100%;
 }
 
+/* Any element with this class applied to them will have whitespace the size of 20% of the page between itself and both sides of the screen */
 .lorem {
   margin-left: 20%;
   margin-right: 20%;
   text-align: left;
 }
 
+/* This CSS ensures that when the mouse cursor hovers over a link in the navbar, it changes to a dark blue colour temporarily */
 .navlink:hover{
   color: #003264;
   text-decoration: none;
@@ -99,10 +110,12 @@ body{
 
 /* About */
 
+/* This CSS sets the secret link in the navbar on the About page to have a default colour that matches with the background of the navbar, to make it blend in */
 #easterlink {
   color: #392e6d;
 }
 
+/* This CSS changes the colour of the secret link to white whenever a user hovers over it, so that it becomes revealed */
 #easterlink:hover{
   color: white;
 }
@@ -113,7 +126,7 @@ body{
 }
 
 /* Keeping Footer Down */
-
+/* This is all CSS put in place to ensure that the footer element is always at the bottom of the page, no matter how large or small they are */
 #container {
    min-height:100%;
    position:relative;
@@ -135,7 +148,7 @@ body{
 }
 
 /* Default settings for website pages */
-
+/* These are the settings for when the screen size is above 600 pixels, the upper size of most phone screens */
 @media (min-width: 600px) {
   body{
     text-align: left;
